<resources>
    <string name="app_name">Product list application v1</string>
    <string name="options">Options</string>
    <string name="product_list">Product List</string>
    <string name="product_list_name">Product list</string>
    <string name="products">Products</string>
    <string name="is_bought">Is bought ?</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_name">Enter name</string>
    <string name="modify_product">Update product</string>
    <string name="product_id">Product id</string>
    <string name="add_product">Add product</string>
    <string name="delete_product">Delete product</string>
    <string name="modify">Edit</string>
    <string name="delete">Delete</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="submit">Submit</string>
    <string name="product_list_application">Product list application</string>
    <string name="font_size">Font size:</string>
    <string name="font_color">Font color:</string>
    <string name="buttons_background_color">Buttons background color:</string>
    <string name="buttons_font_color">Buttons font color</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="shops">Shops</string>
    <string name="shop_list">Shop list</string>
    <string name="enter_description">Enter description</string>
    <string name="add_shop">Add shop</string>
    <string name="enter_range">Enter range [m]</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="get_location_from_map">GET LOCATION FROM MAP</string>
    <string name="get_current_location">GET CURRENT LOCATION</string>
    <string name="name_dots">Name:</string>
    <string name="description_dots">Description:</string>
    <string name="range_m_dots">Range [m]:</string>
    <string name="go_to_homepage">GO TO HOMEPAGE</string>
    <string name="go_to_map">GO TO MAP</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
</resources>
